--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "private": true,
-  "name": "devextreme-reactive",
+  "name": "devextreme-reactive-rtl",
   "author": {
     "name": "Developer Express Inc.",
     "url": "https://www.devexpress.com/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DevExpress/devextreme-reactive.git"
+    "url": "git+https://github.com/alirni/devextreme-reactive.git"
   },
   "license": "SEE LICENSE IN README.md",
   "devDependencies": {
@@ -32,7 +32,6 @@
     "typescript": "^3.3.3333"
   },
   "scripts": {
-    "postinstall": "check-node-version --quiet --node \">=6.11.1\" --npm \">=5.3.0\" --yarn \">=1.0.0\"",
     "build": "yarn run build:ts && lerna run build --ignore @devexpress/dx-vue-*",
     "build:ts": "node ./scripts/ts-generator.js && lerna run dts",
     "build:ts:watch": "nodemon --exec \"yarn build:ts\" --watch \"packages/*/docs/reference/*.md\" --watch \"scripts/ts-generator.js\" --ext md,js",
