--- a/packages/dx-core/package.json
+++ b/packages/dx-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@devexpress/dx-core",
-  "version": "1.10.5",
+  "version": "1.10.6-rtl",
   "description": "Core library for DevExtreme Reactive Components",
   "author": {
     "name": "Developer Express Inc.",
