--- a/packages/dx-demo-shell/package.json
+++ b/packages/dx-demo-shell/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@devexpress/dx-demo-shell",
-  "version": "1.10.5",
+  "version": "1.10.6-rtl",
   "description": "DevExtreme Reactive Components Demo Shell",
   "author": {
     "name": "Developer Express Inc.",
