--- a/packages/dx-grid-core/package.json
+++ b/packages/dx-grid-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@devexpress/dx-grid-core",
-  "version": "1.10.5",
+  "version": "1.10.6-rtl",
   "description": "Core library for the DevExtreme Reactive Grid component",
   "author": {
     "name": "Developer Express Inc.",
@@ -40,7 +40,7 @@
     "lint:fix": "yarn run lint -- --fix"
   },
   "devDependencies": {
-    "@devexpress/dx-core": "1.10.5",
+    "@devexpress/dx-core": "1.10.6-rtl",
     "core-js": "^2.6.5",
     "jest": "^24.1.0",
     "rollup": "^1.2.3",
