--- a/packages/dx-react-grid-bootstrap3/package.json
+++ b/packages/dx-react-grid-bootstrap3/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@devexpress/dx-react-grid-bootstrap3",
-  "version": "1.10.5",
+  "version": "1.10.6-rtl",
   "description": "Bootstrap 3 templates for DevExtreme React Grid component",
   "author": {
     "name": "Developer Express Inc.",
@@ -48,10 +48,10 @@
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "@devexpress/dx-grid-core": "1.10.5",
-    "@devexpress/dx-react-core": "1.10.5",
-    "@devexpress/dx-react-grid": "1.10.5",
-    "@devexpress/dx-testing": "1.10.5",
+    "@devexpress/dx-grid-core": "1.10.6-rtl",
+    "@devexpress/dx-react-core": "1.10.6-rtl",
+    "@devexpress/dx-react-grid": "1.10.6-rtl",
+    "@devexpress/dx-testing": "1.10.6-rtl",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.1.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
