--- a/packages/dx-react-grid-material-ui/package.json
+++ b/packages/dx-react-grid-material-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@devexpress/dx-react-grid-material-ui",
-  "version": "1.10.5",
+  "version": "1.10.6-rtl",
   "description": "Material-UI templates for DevExtreme React Grid component",
   "author": {
     "name": "Developer Express Inc.",
@@ -49,10 +49,10 @@
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "@devexpress/dx-grid-core": "1.10.5",
-    "@devexpress/dx-react-core": "1.10.5",
-    "@devexpress/dx-react-grid": "1.10.5",
-    "@devexpress/dx-testing": "1.10.5",
+    "@devexpress/dx-grid-core": "1.10.6-rtl",
+    "@devexpress/dx-react-core": "1.10.6-rtl",
+    "@devexpress/dx-react-grid": "1.10.6-rtl",
+    "@devexpress/dx-testing": "1.10.6-rtl",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "babel-core": "^7.0.0-bridge.0",
