--- a/packages/dx-scheduler-core/package.json
+++ b/packages/dx-scheduler-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@devexpress/dx-scheduler-core",
-  "version": "1.10.5",
+  "version": "1.10.6-rtl",
   "description": "Core library for the DevExtreme Reactive Scheduler component",
   "author": {
     "name": "Developer Express Inc.",
@@ -41,7 +41,7 @@
     "@babel/core": "^7.3.3",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
-    "@devexpress/dx-core": "1.10.5",
+    "@devexpress/dx-core": "1.10.6-rtl",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.1.0",
     "core-js": "^2.6.5",
