--- a/packages/dx-vue-grid/package.json
+++ b/packages/dx-vue-grid/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@devexpress/dx-vue-grid",
   "private": true,
-  "version": "1.10.5",
+  "version": "1.10.6-rtl",
   "description": "Composable plugin-based data grid component for Vue",
   "author": {
     "name": "Developer Express Inc.",
@@ -40,7 +40,7 @@
     "lint:fix": "yarn run lint -- --fix"
   },
   "devDependencies": {
-    "@devexpress/dx-testing": "1.10.5",
+    "@devexpress/dx-testing": "1.10.6-rtl",
     "@vue/test-utils": "1.0.0-beta.12",
     "babel-core": "^6.26.3",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -68,8 +68,8 @@
     "vue-template-compiler": "^2.5.17"
   },
   "dependencies": {
-    "@devexpress/dx-core": "1.10.5",
-    "@devexpress/dx-grid-core": "1.10.5"
+    "@devexpress/dx-core": "1.10.6-rtl",
+    "@devexpress/dx-grid-core": "1.10.6-rtl"
   },
   "peerDependencies": {
     "@devexpress/dx-vue-core": "1.10.5",
