--- a/packages/dx-react-core/package.json
+++ b/packages/dx-react-core/package.json
@@ -62,7 +62,7 @@
     "typescript": "^3.3.3333"
   },
   "dependencies": {
-    "@devexpress/dx-core": "1.10.6-rtl",
+    "dx-core-rtl": "1.10.6-rtl",
     "prop-types": "^15.7.2"
   },
   "peerDependencies": {
