--- a/packages/dx-react-grid-material-ui/package.json
+++ b/packages/dx-react-grid-material-ui/package.json
@@ -49,9 +49,9 @@
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "@devexpress/dx-grid-core": "1.10.6-rtl",
-    "@devexpress/dx-react-core": "1.10.6-rtl",
-    "@devexpress/dx-react-grid": "1.10.6-rtl",
+    "dx-grid-core-rtl": "1.10.6-rtl",
+    "dx-react-core-rtl": "1.10.6-rtl",
+    "dx-react-grid-rtl": "1.10.6-rtl",
     "@devexpress/dx-testing": "1.10.6-rtl",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
@@ -86,9 +86,6 @@
     "prop-types": "^15.7.2"
   },
   "peerDependencies": {
-    "@devexpress/dx-grid-core": "1.10.5",
-    "@devexpress/dx-react-core": "1.10.5",
-    "@devexpress/dx-react-grid": "1.10.5",
     "@material-ui/core": ">=3.9.2",
     "@material-ui/icons": ">=3.0.2",
     "react": ">=16.8.3"
