--- a/packages/dx-react-grid/package.json
+++ b/packages/dx-react-grid/package.json
@@ -52,8 +52,8 @@
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "@devexpress/dx-core": "1.10.6-rtl",
-    "@devexpress/dx-react-core": "1.10.6-rtl",
+    "dx-core-rtl": "1.10.6-rtl",
+    "dx-react-core-rtl": "1.10.6-rtl",
     "@devexpress/dx-testing": "1.10.6-rtl",
     "babel-core": "^7.0.0-bridge.0",
     "core-js": "^2.6.5",
@@ -72,11 +72,9 @@
     "typescript": "^3.3.3333"
   },
   "dependencies": {
-    "@devexpress/dx-grid-core": "1.10.6-rtl"
+    "dx-grid-core-rtl": "1.10.6-rtl"
   },
   "peerDependencies": {
-    "@devexpress/dx-core": "1.10.5",
-    "@devexpress/dx-react-core": "1.10.5",
     "react": ">=16.8.3",
     "react-dom": ">=16.8.3"
   }
